# brevurl

./: .gitignore  CHANGELOG.md  CREDITS  brevurl_config.json  cors.py  firebase_config.json  pyproject.toml
.github/: FUNDING.yml
src/: setup.py
src/server/: server.py
src/server/static/: account.css  account.css.map  account.js  account.scss  adminpanel.css  adminpanel.css.map  adminpanel.js  adminpanel.scss  auth.js  authscript.js  login.css  login.css.map  login.scss  ourteam.css  ourteam.css.map  ourteam.js  ourteam.scss  recover.css  recover.css.map  recover.scss  register.css  register.css.map  register.scss  script.js  style.css  style.css.map  styles.scss
src/server/templates/: account.html  adminpanel.html  index.html  login.html  ourteam.html  recover.html  register.html
src/web/: index.html  script.js  style.css  style.css.map  styles.scss
test/: web.html
